@@ -98,3 +98,5 @@ K * Work out how to get autoconf to define HAVE_LIBTIFF et al inside the source
   * Check the code examples for the curves.c code
 
   * Make sure the date code is portable...
+
+  * Need to handle the absense of headers when libraries are not installed.
