@@ -1,5 +1,7 @@
 noinst_PROGRAMS = pandademo pandademolegacy circles morecircles
 
+LDADD = -lpanda -ldmalloc -L..
+
 pandademo_SOURCES = main.c
 pandademolegacy_SOURCES = legacymain.c
 circles_SOURCES = circles.c
