@@ -3,39 +3,41 @@
 #include <panda/functions.h>
 #include <panda/constants.h>
 
-int *drawcircle(panda_page *, int, int, int, int);
+// Good combinations (not too slow, and nice): [2, 3, 2]
+
+void drawcircle(panda_page *, int, int, int, int);
+
+int degree, reduce, minlen;
 
 int main(int argc, char *argv[]){
   panda_pdf *document;
   panda_page *mypage;
-  int *results, count;
 
-  if((document = panda_open("circles.pdf", "w")) == NULL)
-    panda_error("Could not create circles.pdf");
+  if((document = panda_open("morecircles.pdf", "w")) == NULL)
+    panda_error("Could not create morecircles.pdf");
 
   mypage = panda_newpage(document, panda_pagesize_a4);
+
+  // Get the arguements
+  reduce=atoi(argv[1]);
+  degree=atoi(argv[2]);
+  minlen=atoi(argv[3]);
   
-  // We are going to draw some circles to prove that I can...
-  results = drawcircle(mypage, 200, 200, 100, 10);
-
-  for(count = 0; count < 20; count += 2){
-    printf("[%d, %d]\n", results[count], results[count + 1]);
-
-    free(drawcircle(mypage, results[count], results[count + 1], 10, 30));
-  }
+  // Draw a whole bunch of circles
+  drawcircle(mypage, 200, 200, 100, degree);
 
   // Close the PDF
   panda_close(document);
 }
 
-int *drawcircle(panda_page *mypage, int xc, int yc, int len, int lines){
-  int angle, whichline = 0, xe, ye;
-  int *endpoints;
+void drawcircle(panda_page *mypage, int xc, int yc, int len, int lines){
+  int angle, xe, ye;
 
-  // Allocate memory for the endpoints
-  endpoints = (int *) panda_xmalloc(lines * 2 * sizeof(int));
+  if(len < minlen) return;
 
   for(angle = 0; angle < 360; angle += (360 / lines)){
+    printf("[%d %d %d] ", len, angle, degree);
+
     xe = xc + sin((double) angle * 3.1415 / 180) * len;
     ye = yc - cos((double) angle * 3.1415 / 180) * len;
 
@@ -44,10 +46,7 @@ int *drawcircle(panda_page *mypage, int xc, int yc, int len, int lines){
     panda_strokeline(mypage);
     panda_endline(mypage);
 
-    endpoints[whichline] = xe;
-    endpoints[whichline + 1] = ye;
-    whichline += 2;
+    // Now do the things that come off this line
+    drawcircle(mypage, xe, ye, len / reduce, lines);
   }
-
-  return endpoints;
 }
